sky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sky-ingress
  namespace: sky
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sky.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008
  - host: sky-preview.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008
  - host: sky.coflnet.com
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 80
      - path: /skyprofile
        pathType: ImplementationSpecific
        backend:
          service:
            name: player
            port:
              number: 8000
  - host: sky-commands.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-canary-service
            port:
              number: 8008
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-canary-service
            port:
              number: 80
  - host: sky-preview.coflnet.com
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 80
  - host: skyblock.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008
  - host: skyblock-backend.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: indexer-service
            port:
              number: 8008
  - host: coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008

  - host: sky-mod.flou.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 80
  - host: sky-mod.coflnet.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 8008
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-commands-main-service
            port:
              number: 80
